--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
             <div class="carousel-caption">
               <h1>Example headline.</h1>
               <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p>
+		<a class="btn btn-lg btn-primary" href="frontend/pages/login.html" role="button">Sign up</a>
+		<a class="btn btn-lg btn-primary" href="frontend/pages/register.php" role="button">Sign in</a>
+	      </p>
             </div>
           </div>
         </div>
